syntax = "proto3";

package com.samurai.v1;

option java_multiple_files = true;

message ListSamuraiById {
  repeated string ids = 1;
}